# tasks

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gui.cpp  gui.hpp  main.cpp  shell.nix  task.hpp  vcpkg.json
.github/actions/darwin/base/: action.yaml
.github/actions/linux/base/: action.yaml
.github/workflows/: ci.yaml  cmake-multi-platform.yml
cmake/presets/: base.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: task.cpp
